--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>adataanalyst.github.io</title>
+<title>A Data Analyst</title>
 </head>
 <body>
 adataanalyst.github.io
