--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">A<span class="text-primary">nalyst</span></h1>
                     <div class="subheading mb-5">123456789</div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide.</p>
+                    <p class="lead mb-5">I am experienced in.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a><a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://github.com/ADataAnalyst"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
