--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Marketing</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>一二三</p>
+                            <h3 class="mb-0">行政</h3>
+                            <div class="subheading mb-3">有限公司</div>
+                            <p>運用Excel的函數和樞紐，用來分析成本結構和統計營收報表。</p>
+                            <p> 進行圖像編輯，製作Logo、Menu、平面文宣等。</p>
+                            <p>投放Google  Ads，以及協助團隊一同發想社群媒體的文案。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
@@ -107,18 +109,10 @@
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Agile Development & Scrum
-                        </li>
+                        <li>Mobile-First, Responsive Design</li>
+                        <li>Cross Browser Testing & Debugging</li>
+                        <li>Cross Functional</li>
+                        <li>Development</li>
                     </ul>
                 </div>
             </section>
@@ -137,15 +131,9 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            Google Analytics Certification
-                        </li>
-                        <li>
-                            Google Ads Certification
-                        </li>
-                        <li>
-                            University of the Arts London - Fashion Business course programme in 2010
-                        </li>
+                        <li>Google Ads Certification</li>
+                        <li>Google Analytics Certification</li>
+                        <li>University of the Arts London - course programme in Fashion Business</li>
                     </ul>
                 </div>
             </section>
