--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">行政</h3>
                             <div class="subheading mb-3">有限公司</div>
-                            <p>運用Excel的函數和樞紐，用來分析成本結構和統計營收報表。</p>
-                            <p> 進行圖像編輯，製作Logo、Menu、平面文宣等。</p>
-                            <p>投放Google  Ads，以及協助團隊一同發想社群媒體的文案。</p>
+                            <p>• 運用Excel的函數和樞紐，用來分析成本結構和統計營收報表。</p>
+                            <p>• 進行圖像編輯，製作Logo、Menu、平面文宣等。</p>
+                            <p>• 投放Google  Ads，以及協助團隊一同發想社群媒體的文案。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
