--- a/index.html
+++ b/index.html
@@ -57,13 +57,17 @@
                             <p>• 進行圖像編輯，製作Logo、Menu、平面文宣等。</p>
                             <p>• 投放Google  Ads，以及協助團隊一同發想社群媒體的文案。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2014 - February 2015</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">業務副理</h3>
+                            <div class="subheading mb-3">股份有限公司</div>
+                            <p>• 擔任銀行與客戶之間的溝通協調者。</p>
+                            <p>• 評估各項專案的法務執行效益。</p>
+                            <p>• 執行各種非訟事件程序。</p>
+                            <p>• 撰寫各類民事書狀。</p>
+                            <p>• 代表銀行出席法院的審理程序和調解會議。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
