--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">A<span class="text-primary">nalyst</span></h1>
-                    <div class="subheading mb-5">123456789</div>
                     <p class="lead mb-5">I am experienced in.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/ADataAnalyst"><i class="fab fa-github"></i></a>
@@ -106,17 +105,17 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">Programming Languages</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-markdown"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
-                        <li>Mobile-First, Responsive Design</li>
-                        <li>Cross Browser Testing & Debugging</li>
+                        <li>Affinity Designer</li>
+                        <li>Affinity Photo</li>
                         <li>Cross Functional</li>
                         <li>Development</li>
                     </ul>
@@ -127,17 +126,17 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>, and kayaking.</p>
+                    <p class="mb-0">Whein  web  world.</p>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
+            <!-- Certifications-->
             <section class="resume-section" id="certifications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
-                    <li>Google Ads Certification</li>
-                    <li>Google Analytics Certification</li>
+                    <li>Google Ads</li>
+                    <li>Google Analytics</li>
                     <li>University of the Arts London - course programme in Fashion Business</li>
                 </div>
             </section>
