--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">行政</h3>
                             <div class="subheading mb-3">有限公司</div>
+                            <ul class="fa-ul mb-0">
                                 <li>運用Excel的函數和樞紐，用來分析成本結構和統計營收報表。</li>
                                 <li>進行圖像編輯，製作Logo、Menu、平面文宣等。</li>
                                 <li>投放Google  Ads，以及協助團隊一同發想社群媒體的文案。</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2014 - February 2015</span></div>
                     </div>
@@ -62,11 +64,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">業務副理</h3>
                             <div class="subheading mb-3">股份有限公司</div>
+                            <ul class="fa-ul mb-0">
                                 <li>擔任銀行與客戶之間的溝通協調者。</li>
                                 <li>評估各項專案的法務執行效益。</li>
                                 <li>執行各種非訟事件程序。</li>
                                 <li>撰寫各類民事書狀。</li>
                                 <li>代表銀行出席法院的審理程序和調解會議。</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2006 - July 2010</span></div>
                     </div>
@@ -135,9 +139,11 @@
             <section class="resume-section" id="certifications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
-                    <li>Google Ads</li>
-                    <li>Google Analytics</li>
-                    <li>University of the Arts London - course programme in Fashion Business</li>
+                    <ul class="fa-ul mb-0">
+                        <li>Google Ads</li>
+                        <li>Google Analytics</li>
+                        <li>University of the Arts London - course programme in Fashion Business</li>
+                    </ul>
                 </div>
             </section>
         </div>
