--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <li>• 運用Excel的函數和樞紐，用來分析成本結構和統計營收報表。</li>
                                 <li>• 進行圖像編輯，製作Logo、Menu、平面文宣等。</li>
                                 <li>• 投放Google  Ads，以及協助團隊一同發想社群媒體的文案。</li>
-                                <li></li>
+                                <br>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2014 - February 2015</span></div>
@@ -71,7 +71,7 @@
                                 <li>• 執行各種非訟事件程序。</li>
                                 <li>• 撰寫各類民事書狀。</li>
                                 <li>• 代表銀行出席法院的審理程序和調解會議。</li>
-                                <li></li>
+                                <br>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2006 - July 2010</span></div>
@@ -144,7 +144,7 @@
                     <ul class="fa-ul mb-0">
                         <li>• Google Ads</li>
                         <li>• Google Analytics</li>
-                        <li>• University of the Arts London - course programme in Fashion Business</li>
+                        <li>• University of the Arts London<br>- course programme in Fashion Business</li>
                     </ul>
                 </div>
             </section>
