--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#personality">Personality</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a></li>
                 </ul>
             </div>
@@ -128,12 +128,17 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <!-- Personality-->
+            <section class="resume-section" id="personality">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>, and kayaking.</p>
-                    <p class="mb-0">Whein  web  world.</p>
+                    <h2 class="mb-5">Personality</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>• Novelty</li>
+                        <li>• Curiosity</li>
+                        <li>• Perspective</li>
+                        <li>• Diversity</li>
+                        <li>• Authenticity</li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
@@ -144,7 +149,8 @@
                     <ul class="fa-ul mb-0">
                         <li>• Google Ads</li>
                         <li>• Google Analytics</li>
-                        <li>• University of the Arts London<br>  - course programme in Fashion Business</li>
+                        <li>• University of the Arts London</li>
+                        <li>  - course programme in Fashion Business</li>
                     </ul>
                 </div>
             </section>
