--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">ADataAanlyst</span><span class="d-none d-lg-block"></span></a>
+                <span class="d-block d-lg-none">ADataAanlyst - Resume</span><span class="d-none d-lg-block"></span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -115,8 +115,8 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-markdown"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
                     </ul>
                     <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
