--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>ADataAnalyst</title>
+        <title>Resume - Analyst</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -17,9 +17,9 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">ADataAanlyst - Resume</span><span class="d-none d-lg-block"></span></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"
+                ><span class="d-block d-lg-none">Analyst</span></a
+            ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
@@ -37,9 +37,10 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">A<span class="text-primary">nalyst</span></h1>
-                    <p class="lead mb-5">I am experienced in.</p>
+                    <div class="subheading mb-5">123456789</div>
+                    <p class="lead mb-5">I am</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://github.com/ADataAnalyst"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -50,23 +51,19 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">行政</h3>
-                            <div class="subheading mb-3">有限公司</div>
-                            <ul class="fa-ul mb-0">
-                                <li>• 運用Excel的函數和樞紐，用來分析成本結構和統計營收報表。</li>
-                                <li>• 進行圖像編輯，製作Logo、Menu、平面文宣等。</li>
-                                <li>• 投放Google  Ads，以及協助團隊一同發想社群媒體的文案。</li>
-                                <br>
-                            </ul>
+                            <h3 class="mb-0">Senior Web Developer</h3>
+                            <div class="subheading mb-3">Intelitec Solutions</div>
+                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2014 - February 2015</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">業務副理</h3>
-                            <div class="subheading mb-3">股份有限公司</div>
+                            <h3 class="mb-0">Web Developer</h3>
+                            <div class="subheading mb-3">Intelitec Solutions</div>
+                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2006 - July 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
                 </div>
             </section>
@@ -77,25 +74,40 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">科技大學</h3>
-                            <div class="subheading mb-3">二專部應用外語系</div>
+                            <h3 class="mb-0">University of Colorado Boulder</h3>
+                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <div>Computer Science - Web Development Track</div>
+                            <p>GPA: 3.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2000 - June 2003</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">工商</h3>
-                            <div class="subheading mb-3">電子科</div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 1997 - June 1999</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">工商</h3>
-                            <div class="subheading mb-3">資料處理科</div>
+                            <h3 class="mb-0">James Buchanan High School</h3>
+                            <div class="subheading mb-3">Technology Magnet Program</div>
+                            <p>GPA: 3.56</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 1996 - June 1997</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">James Buchanan High School</h3>
+                            <div class="subheading mb-3">Technology Magnet Program</div>
+                            <p>GPA: 3.56</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">James Buchanan High School</h3>
+                            <div class="subheading mb-3">Technology Magnet Program</div>
+                            <p>GPA: 3.56</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                    </div>
+
                 </div>
             </section>
             <hr class="m-0" />
@@ -109,26 +121,32 @@
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-markdown"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
+
                     </ul>
                     <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
-                        <li>Affinity Designer</li>
-                        <li>Affinity Photo</li>
+                        <li>
+                            Affinity Designer
+                        </li>
+                        <li>
+                            Affinity Photo
+                        </li>
+                        <li>
+                            Cross Functional Teams
+                        </li>
+                        <li>
+                            Agile Development & Scrum
+                        </li>
                     </ul>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Personality-->
-            <section class="resume-section" id="personality">
+            <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Personality</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>• Novelty</li>
-                        <li>• Curiosity</li>
-                        <li>• Perspective</li>
-                        <li>• Diversity</li>
-                        <li>• Authenticity</li>
-                    </ul>
+                    <h2 class="mb-5">Interests</h2>
+                    <p>one.</p>
+                    <p class="mb-0">two.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -137,9 +155,15 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
-                        <li>• Google Ads</li>
-                        <li>• Google Analytics</li>
-                        <li>• University of the Arts London<br> - course programme in Fashion Business</li>
+                        <li>
+                            Google Ads Certification
+                        </li>
+                        <li>
+                            Google Analytics Certification
+                        </li>
+                        <li>
+                            University of Arts London - course programme in Fashion Business
+                        </li>
                     </ul>
                 </div>
             </section>
