--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             </section>
             <hr class="m-0" />
             <!-- Personality-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="personality">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">Personality</h2>
                     <p>one.</p>
                     <p class="mb-0">two.</p>
                 </div>
