--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2000 - June 2003</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Kao-Yuan Vocational High School</h3>
                             <div class="subheading mb-3">Electronic Engineering</div>
