--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2014 - February 2015</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Deputy Account Manager</h3>
                             <div class="subheading mb-3">Jungshin Assets Management Co., Ltd.</div>
