--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="subheading mb-5">123456789</div>
                     <p class="lead mb-5">I am</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/ADataAnalyst/Notes"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
