--- a/index.html
+++ b/index.html
@@ -113,16 +113,10 @@
                     <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            Affinity Designer
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Affinity Designer
                         </li>
                         <li>
-                            Affinity Photo
-                        </li>
-                        <li>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            Agile Development & Scrum
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Affinity Photo
                         </li>
                     </ul>
                 </div>
@@ -143,13 +137,13 @@
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            Google Ads Certification
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Google Ads Certification
                         </li>
                         <li>
-                            Google Analytics Certification
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Google Analytics Certification
                         </li>
                         <li>
-                            University of Arts London - course programme in Fashion Business
+                            <span class="fa-li"><i class="fas fa-check"></i></span>University of Arts London - course programme in Fashion Business
                         </li>
                     </ul>
                 </div>
