--- a/index.html
+++ b/index.html
@@ -126,8 +126,27 @@
             <section class="resume-section" id="personality">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Personality</h2>
-                    <p>one.</p>
-                    <p class="mb-0">two.</p>
+
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Novelty
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Curiosity
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Perspective
+                        </li>
+
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Diversity
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Authenticity
+                        </li>
+
+                    </ul>
+
                 </div>
             </section>
             <hr class="m-0" />
