--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>Google Analytics Certification
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>University of Arts London - course programme in Fashion Business
+                            <span class="fa-li"><i class="fas fa-check"></i></span>University of Arts London <br>- course programme in Fashion Business
                         </li>
                     </ul>
                 </div>
