--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                     <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Affinity Designer
+                            <span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Designer
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Affinity Photo
+                            <span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Photo
                         </li>
                     </ul>
                 </div>
@@ -128,20 +128,20 @@
                     <h2 class="mb-5">Personality</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Novelty
+                            <span class="fa-li"><i class="fas fa-circle"></i></span>Novelty
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Curiosity
+                            <span class="fa-li"><i class="fas fa-circle"></i></span>Curiosity
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Perspective
+                            <span class="fa-li"><i class="fas fa-circle"></i></span>Perspective
                         </li>
 
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Diversity
+                            <span class="fa-li"><i class="fas fa-circle"></i></span>Diversity
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Authenticity
+                            <span class="fa-li"><i class="fas fa-circle"></i></span>Authenticity
                         </li>
                     </ul>
                 </div>
