--- a/index.html
+++ b/index.html
@@ -128,20 +128,20 @@
                     <h2 class="mb-5">Personality</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-circle"></i></span>Novelty
+                            <span class="fa-li"><i class="far fa-circle"></i></span>Novelty
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-circle"></i></span>Curiosity
+                            <span class="fa-li"><i class="far fa-circle"></i></span>Curiosity
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-circle"></i></span>Perspective
+                            <span class="fa-li"><i class="far fa-circle"></i></span>Perspective
                         </li>
 
                         <li>
-                            <span class="fa-li"><i class="fas fa-circle"></i></span>Diversity
+                            <span class="fa-li"><i class="far fa-circle"></i></span>Diversity
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-circle"></i></span>Authenticity
+                            <span class="fa-li"><i class="far fa-circle"></i></span>Authenticity
                         </li>
                     </ul>
                 </div>
