--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Kao-Yuan University</h3>
                             <div class="subheading mb-3">Associate of Applied Foreign Languages</div>
-                            <p>one</p>
+                            <p>English <br>Business Management</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2000 - June 2003</span></div>
                     </div>
@@ -84,7 +84,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Kao-Yuan Vocational High School</h3>
                             <div class="subheading mb-3">Electronic Engineering</div>
-                            <p>two</p>
+                            <p>Computer Logistic<br>Electronics</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 1997 - June 1999</span></div>
                     </div>
@@ -92,7 +92,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Haicing Vocational High School</h3>
                             <div class="subheading mb-3">Data Processing</div>
-                            <p>three</p>
+                            <p>Statistics</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 1996 - June 1997</span></div>
                     </div>
