--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Assistant</h3>
                             <div class="subheading mb-3">La-Fu Co., Ltd.</div>
-                            <p>one.</p>
+                            <p> Operating the Google Ads. <br>Assisting business operation.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2014 - February 2015</span></div>
                     </div>
@@ -61,7 +61,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Deputy Account Manager</h3>
                             <div class="subheading mb-3">Jungshin Assets Management Co., Ltd.</div>
-                            <p>two.</p>
+                            <p> Executing process of civil lawsuit and judicial attachment. <br>Communicating with customers.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2006 - July 2010</span></div>
                     </div>
@@ -76,7 +76,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Kao-Yuan University</h3>
                             <div class="subheading mb-3">Associate of Applied Foreign Languages</div>
-                            <p>English <br>Business Management</p>
+                            <p>- English & Business</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2000 - June 2003</span></div>
                     </div>
@@ -84,7 +84,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Kao-Yuan Vocational High School</h3>
                             <div class="subheading mb-3">Electronic Engineering</div>
-                            <p>Computer Logistic<br>Electronics</p>
+                            <p>- Electronics & Computer Science</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 1997 - June 1999</span></div>
                     </div>
@@ -92,7 +92,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Haicing Vocational High School</h3>
                             <div class="subheading mb-3">Data Processing</div>
-                            <p>Statistics</p>
+                            <p>- Statistics & Computer Operation</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 1996 - June 1997</span></div>
                     </div>
