--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">R<span class="text-primary">esume</span></h1>
-                    <div class="subheading mb-5"></div>
-                    <p class="lead mb-5">Digital Marketing <br>Data Analyst</p>
+                    <div class="subheading mb-5">Digital Marketing / Data Analyst</div>
+                    <p class="lead mb-5"></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/ADataAnalyst/Notes"><i class="fab fa-github"></i></a>
                     </div>
