--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - </title>
+        <title>Resume</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -36,7 +36,7 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">F<span class="text-primary">or</span></h1>
+                    <h1 class="mb-0">I<span class="text-primary">’m</span></h1>
                     <div class="subheading mb-5">An enthusiast about <br>Behavioral Economics <br>Customer Experience <br>Data Driven Marketing</div>
                     <p class="lead mb-5"></p>
                     <div class="social-icons">
