--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Haicing Vocational High School</h3>
+                            <h3 class="mb-0">Hai-Cing Vocational High School</h3>
                             <div class="subheading mb-3">Data Processing</div>
                             <p>- Statistics & Computer Operation</p>
                         </div>
