--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Deputy Account Manager</h3>
-                            <div class="subheading mb-3">Jungshin Assets Management Co., Ltd.</div>
+                            <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
                             <p> Executing process of civil lawsuit and judicial attachment. <br>Communicating with customers.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2006 - July 2010</span></div>
