--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                     </ul>
                     <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
-                        <li><span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Designer</li>
-                        <li><span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Photo</li>
+                        <li><span class="fa-li"><i class="fas fa-square"></i></span>Affinity Designer</li>
+                        <li><span class="fa-li"><i class="fas fa-square"></i></span>Affinity Photo</li>
                     </ul>
                 </div>
             </section>
