--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#personality">Personality</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a></li>
         </ul>
       </div>
@@ -30,7 +29,7 @@
       <section class="resume-section" id="about">
         <div class="resume-section-content">
           <h1 class="mb-0">I<span class="text-primary">’m</span></h1>
-          <div class="subheading mb-5">An enthusiast about <br />Behavioral Economics <br />Customer Experience <br />Data-Driven Marketing</div>
+          <div class="subheading mb-5">An Enthusiast About <br />Behavioral Economics <br />Customer Experience <br />Data-Driven Marketing</div>
           <p class="lead mb-5"></p>
           <div class="social-icons">
             <a class="social-icon" href="https://github.com/ADataAnalyst/Notes"><i class="fab fa-github"></i></a>
@@ -99,7 +98,22 @@
             <li class="list-inline-item"><i class="fab fa-html5"></i></li>
             <li class="list-inline-item"><i class="fab fa-markdown"></i></li>
           </ul>
-          <div class="subheading mb-3">Tools</div>
+          <div class="subheading mb-3">Data Science</div>
+          <ul class="fa-ul mb-0">
+            <li><span class="fa-li"><i class="fas fa-square"></i></span>NumPy</li>
+            <li><span class="fa-li"><i class="fas fa-square"></i></span>pandas</li>
+            <li><span class="fa-li"><i class="fas fa-square"></i></span>scikit-learn</li>
+            <li><span class="fa-li"><i class="fas fa-square"></i></span>Keras</li>
+            <li><span class="fa-li"><i class="fas fa-square"></i></span>TensorFlow</li>
+          </ul>
+          <div class="subheading mb-3">Marketing</div>
+          <ul class="fa-ul mb-0">
+            <li><span class="fa-li"><i class="fas fa-square"></i></span>Persona</li>
+            <li><span class="fa-li"><i class="fas fa-square"></i></span>Emotional Branding</li>
+            <li><span class="fa-li"><i class="fas fa-square"></i></span>User Experience</li>
+            <li><span class="fa-li"><i class="fas fa-square"></i></span>Behavioral Economics</li>
+          </ul>
+          <div class="subheading mb-3">Graphics Editor</div>
           <ul class="fa-ul mb-0">
             <li><span class="fa-li"><i class="fas fa-square"></i></span>Affinity Designer</li>
             <li><span class="fa-li"><i class="fas fa-square"></i></span>Affinity Photo</li>
