--- a/index.html
+++ b/index.html
@@ -100,36 +100,23 @@
           </ul>
           <div class="subheading mb-3">Data Science</div>
           <ul class="fa-ul mb-0">
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>NumPy</li>
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>pandas</li>
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>scikit-learn</li>
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>Keras</li>
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>TensorFlow</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>NumPy</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>pandas</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>scikit-learn</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>Keras</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>TensorFlow</li>
           </ul>
           <div class="subheading mb-3">Marketing</div>
           <ul class="fa-ul mb-0">
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>Persona</li>
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>Emotional Branding</li>
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>User Experience</li>
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>Behavioral Economics</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>Persona</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>Emotional Branding</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>User Experience</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>Behavioral Economics</li>
           </ul>
           <div class="subheading mb-3">Graphics Editor</div>
           <ul class="fa-ul mb-0">
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>Affinity Designer</li>
-            <li><span class="fa-li"><i class="fas fa-square"></i></span>Affinity Photo</li>
-          </ul>
-        </div>
-      </section>
-      <hr class="m-0" />
-      <section class="resume-section" id="personality">
-        <div class="resume-section-content">
-          <h2 class="mb-5">Personality</h2>
-          <ul class="fa-ul mb-0">
-            <li><span class="fa-li"><i class="far fa-circle"></i></span>Novelty</li>
-            <li><span class="fa-li"><i class="far fa-circle"></i></span>Curiosity</li>
-            <li><span class="fa-li"><i class="far fa-circle"></i></span>Perspective</li>
-            <li><span class="fa-li"><i class="far fa-circle"></i></span>Diversity</li>
-            <li><span class="fa-li"><i class="far fa-circle"></i></span>Authenticity</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>Affinity Designer</li>
+            <li><span class="fa-li"><i class="far fa-circle"></i></span>Affinity Photo</li>
           </ul>
         </div>
       </section>
