--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li class="list-inline-item"><i class="fab fa-markdown"></i></li>
           </ul>
           <br />
-          <div class="subheading mb-3">Data Science</div>
+          <div class="subheading mb-3"><span class="text-primary">Data Science</span></div>
           <ul class="fa-ul mb-0">
             <li><span class="fa-li"><i class="far fa-circle"></i></span>NumPy</li>
             <li><span class="fa-li"><i class="far fa-circle"></i></span>pandas</li>
@@ -109,7 +109,7 @@
           </ul>
           <br />
           <br />
-          <div class="subheading mb-3">Marketing</div>
+          <div class="subheading mb-3"><span class="text-primary">Marketing</span></div>
           <ul class="fa-ul mb-0">
             <li><span class="fa-li"><i class="far fa-circle"></i></span>Persona</li>
             <li><span class="fa-li"><i class="far fa-circle"></i></span>Emotional Branding</li>
@@ -118,7 +118,7 @@
           </ul>
           <br />
           <br />
-          <div class="subheading mb-3">Graphics Editor</div>
+          <div class="subheading mb-3"><span class="text-primary">Graphics Editor</span></div>
           <ul class="fa-ul mb-0">
             <li><span class="fa-li"><i class="far fa-circle"></i></span>Affinity Designer</li>
             <li><span class="fa-li"><i class="far fa-circle"></i></span>Affinity Photo</li>
