--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
               <h3 class="mb-0">Assistant</h3>
-              <div class="subheading mb-3">La-Fu Co., Ltd.</div>
+              <div class="subheading mb-3"><span class="text-primary">La-Fu Co., Ltd.</span></div>
               <p>Operating the Google Ads. <br />Assisting business operation.</p>
             </div>
             <div class="flex-shrink-0"><span class="text-primary">July 2014 - February 2015</span></div>
