--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Assistant</h3>
               <div class="subheading mb-3"><span class="text-primary">La-Fu Co., Ltd.</span></div>
-              <p>Operating the Google Ads. <br />Assisting business operation.</p>
+              <p>- Operating the Google Ads. <br />- Assisting business operation.</p>
             </div>
             <div class="flex-shrink-0">July 2014 - February 2015</div>
           </div>
           <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="flex-grow-1">
               <h3 class="mb-0">Deputy Account Manager</h3>
-              <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
-              <p>Executing process of civil lawsuit and judicial attachment. <br />Communicating with customers.</p>
+              <div class="subheading mb-3"><span class="text-primary">Jung-Shin Assets Management Co., Ltd.</span></div>
+              <p>- Executing process of civil lawsuit and judicial attachment. <br />- Communicating with customers.</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">March 2006 - July 2010</span></div>
+            <div class="flex-shrink-0">March 2006 - July 2010</div>
           </div>
         </div>
       </section>
@@ -65,26 +65,26 @@
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
               <h3 class="mb-0">Kao-Yuan University</h3>
-              <div class="subheading mb-3">Associate of Applied Foreign Languages</div>
+              <div class="subheading mb-3"><span class="text-primary">Associate of Applied Foreign Languages</span></div>
               <p>- English & Business</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">September 2000 - June 2003</span></div>
+            <div class="flex-shrink-0">September 2000 - June 2003</div>
           </div>
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
               <h3 class="mb-0">Kao-Yuan Vocational High School</h3>
-              <div class="subheading mb-3">Electronic Engineering</div>
+              <div class="subheading mb-3"><span class="text-primary">Electronic Engineering</span></div>
               <p>- Electronics & Computer Science</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">September 1997 - June 1999</span></div>
+            <div class="flex-shrink-0">September 1997 - June 1999</div>
           </div>
           <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="flex-grow-1">
               <h3 class="mb-0">Hai-Cing Vocational High School</h3>
-              <div class="subheading mb-3">Data Processing</div>
+              <div class="subheading mb-3"><span class="text-primary">Data Processing</span></div>
               <p>- Statistics & Computer Operation</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">September 1996 - June 1997</span></div>
+            <div class="flex-shrink-0">September 1996 - June 1997</div>
           </div>
         </div>
       </section>
