--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
       <section class="resume-section" id="about">
         <div class="resume-section-content">
           <h1 class="mb-0">
-            I
-            <span class="text-primary">'</span>
-            m
+            I<span class="text-primary">'</span>m
           </h1>
           <div class="subheading mb-5">
-            
+            An Enthusiast About <br />Behavioral Economics <br />Customer Experience <br />Data-Driven Marketing
           </div>
-          <p class="lead mb-5">An Enthusiast About <br />Behavioral Economics <br />Customer Experience <br />Data-Driven Marketing</p>
+          <p class="lead mb-5"></p>
           <div class="social-icons">
             <a class="social-icon" href="https://github.com/ADataAnalyst/Notes"><i class="fab fa-github"></i></a>
           </div>
@@ -56,7 +54,7 @@
             </div>
             <div class="flex-shrink-0"><span class="text-primary">July 2014 - February 2015</span></div>
           </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="flex-grow-1">
               <h3 class="mb-0">Deputy Account Manager</h3>
               <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
@@ -86,7 +84,7 @@
             </div>
             <div class="flex-shrink-0"><span class="text-primary">September 1997 - June 1999</span></div>
           </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="flex-grow-1">
               <h3 class="mb-0">Data Processing</h3>
               <div class="subheading mb-3">Hai-Cing Vocational High School</div>
