--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="subheading mb-3">Marketing</div>
           <ul class="fa-ul mb-0">
             <li>
-              <span class="text-primary"><i class="far fa-circle"></i></span>
+              <span class="fa-li"><i class="far fa-circle"></i></span>
               Persona
             </li>
             <li>
