--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#links">Links</a>
           </li>
-
         </ul>
       </div>
     </nav>
@@ -253,9 +251,8 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
-                <i class="far fa-circle"></i>
+                <i class="far fa-circle">Portfolio 1</i>
               </span>
-              Portfolio 1
             </li>
             <li>
               <span class="fa-li">
