--- a/index.html
+++ b/index.html
@@ -251,8 +251,9 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
-                <i class="far fa-circle">Portfolio 1</i>
+                <i class="far fa-circle"></i>
               </span>
+              <a href="portfolios/portfolio_1">Portfolio 1</a>
             </li>
             <li>
               <span class="fa-li">
