--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              <a href="portfolios/portfolio_1">Portfolio 1</a>
+              <a class="text-primary" href="portfolios/portfolio_1">Portfolio 1</a>
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Portfolio 2
+              <span class="text-primary" href="portfolios/portfolio_1">Portfolio 2</span>
             </li>
             <li>
               <span class="fa-li">
