--- a/index.html
+++ b/index.html
@@ -250,16 +250,12 @@
           <div class="subheading mb-3">Portfolios</div>
           <ul class="fa-ul mb-0">
             <li>
-              <span class="fa-li">
-                <i class="far fa-circle"></i>
+              <span class="text-primary">
+                <a href="portfolios/portfolio_1">Portfolio 1</a>
               </span>
-              <a class="text-primary" href="portfolios/portfolio_1">Portfolio 1</a>
             </li>
             <li>
-              <span class="fa-li">
-                <i class="far fa-circle"></i>
-              </span>
-              <span class="text-primary" href="portfolios/portfolio_1">Portfolio 2</span>
+              <a class="text-primary" href="portfolios/portfolio_2">Portfolio 2</a>
             </li>
             <li>
               <span class="fa-li">
